--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     #app {
       width: 100vw;
       height: 100vh;
+      touch-action: none;
+      /* Prevent browser scrolling/gestures */
     }
 
     .ui-overlay {
