Remove Sunset Garden Portal text from title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <meta name="description" content="Duar - An immersive 3D portal experience to explore different dimensions" />
-  <title>Duar - Sunset Garden Portal</title>
+  <title>Duar</title>
   <style>
     * {
       margin: 0;
